--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
   },
   "dependencies": {
     "babel-polyfill": "^6.7.4",
+    "history": "^2.0.1",
     "marked": "^0.3.5",
     "react": "^0.14.7",
     "react-addons-update": "^0.14.7",
+    "react-dom": "^0.14.7",
+    "react-router": "^2.0.1",
     "whatwg-fetch": "^0.11.0"
   }
 }
